# hospital_triage

./: Dockerfile  LICENSE  README.md  docker-compose.yml  download_assets.py  hospital_api.py  inference.py  openenv.yaml  output_final.txt  output_final_cmd.txt  output_proxy_test.txt  output_proxy_test_cmd.txt  output_test.txt  output_test2.txt  output_verify.txt  output_verify_final.txt  output_verify_llm.txt  output_verify_score.txt  pyproject.toml  requirements.txt  setup.py  uv_output.txt
hospital_triage/: __init__.py
hospital_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hospital_triage/envs/: __init__.py  data_structures.py  hospital_triage_env.py  patient_generator.py
hospital_triage/ml/: __init__.py  priority_predictor.py
scripts/: __init__.py  demo.py
server/: app.py
templates/: index.html
tests/: test_hospital_triage.py
